syntax = "proto3";

package com.ruyuan2020.im;

option java_multiple_files = true;
option java_package = "com.ruyuan2020.im.common.protobuf";
option java_outer_classname = "MessageFetchProto";

message MessageFetch {
  uint64 chatId = 1;
  uint64 toId = 2;
  uint32 chatType = 3;
}